added Overview and UML diagram

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <p>Design Document</p>
 </header>
 
+<div class="container">
+    <h2>Overview</h2>
+    <p>This document outlines the system architecture and workflow for the Load Balancer project. The design ensures efficient distribution of network requests across multiple web servers while preventing system overload and mitigating unauthorized access via IP blocking.</p>
+
+    <h2>UML Class Diagram</h2>
+    <div class="diagram-container">
+        <img src="LB_UML_diagram.svg" alt="Load Balancer UML Class Diagram">
+    </div>
+</div>
+
 <footer>
     &copy; 2026 MINH
 </footer>
