added branding logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
 <header>
+    <img src="project_logo.png" alt="Minh Branding Logo" class="brand-logo">
     <h1>Project 3 - Load Balancer</h1>
     <p>Design Document</p>
 </header>
